--- a/frontend/src/app/widget/board/board.component.html
+++ b/frontend/src/app/widget/board/board.component.html
@@ -1,6 +1,8 @@
-<app-board-tiles 
-    *ngFor="let tile of boardHands"
-    [hand]="tile.hand"
-    [raiseFrequency]="tile.raiseFrequency"
-    [callFrequency]="tile.callFrequency">
-</app-board-tiles>
+<div class= "board">
+    <app-board-tiles
+            *ngFor="let tile of boardHands"
+            [hand]="tile.hand"
+            [raiseFrequency]="tile.raiseFrequency"
+            [callFrequency]="tile.callFrequency" >
+    </app-board-tiles>
+</div>
